Updated to Korean chips

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
 	font-family: 'Roboto', sans-serif;
-	background-image: url("https://static.meijer.com/Media/005/15000/0051500048184_a1c1_0600.png");
+	background-image: url("https://gd.image-gmkt.com/ORION-KOREA-ORION-TURTLE-CHIP-80G-3-SET-CORN-SOUP-FLAVOR-BRAND-NEW/li/975/907/779907975.g_400-w_g.jpg");
 	font-size: 75px;
 }
 
